--- a/bikcraft/web/css/style.css
+++ b/bikcraft/web/css/style.css
@@ -163,6 +163,32 @@ body {
     letter-spacing: .1em;
   }
 
+  /* Introdução Interna */
+
+.introducao-interna {
+    width: 100%;
+    margin-top: 92px;
+    height: 160px;
+    text-align: center;
+    color: #FFF;
+    padding-top: 30px;
+  }
+  
+  .introducao-interna h1 {
+    font-size: 36px;
+    font-weight: bold;
+    text-transform: uppercase;
+  }
+  
+  .introducao-interna h1:after {
+    content: " ";
+    display: block;
+    width: 60px;
+    height: 3px;
+    background: #fff;
+    margin: 6px auto 10px auto;
+  }
+
   /* Produtos */
 
 .produtos {
